--- a/main.html
+++ b/main.html
@@ -1,372 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>highest archive paralyze.xyz</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;1,400&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: #0d0f12;
-      color: #e0e4e8;
-      font-family: 'IBM Plex Mono', monospace;
-      line-height: 1.6;
-      padding: 2rem;
-      background-image: 
-        radial-gradient(circle at 10% 20%, rgba(90, 125, 154, 0.03) 0%, transparent 20%),
-        radial-gradient(circle at 90% 80%, rgba(138, 180, 248, 0.02) 0%, transparent 25%);
-    }
-
-    .fade-in {
-      opacity: 1 !important;
-    }
-
-    .fade-out {
-      opacity: 0 !important;
-      pointer-events: none;
-    }
-
-    header {
-      text-align: center;
-      max-width: 800px;
-      margin: 2rem auto 3rem;
-    }
-
-    h1 {
-      font-size: 2.6rem;
-      font-weight: 500;
-      letter-spacing: -0.5px;
-      margin-bottom: 0.8rem;
-      color: #cfd8e3;
-      position: relative;
-    }
-
-    h1::after {
-      content: '';
-      display: block;
-      width: 60px;
-      height: 2px;
-      background: #8ab4f8;
-      margin: 12px auto;
-      border-radius: 1px;
-    }
-
-    .subtitle {
-      color: #8a9ba8;
-      font-size: 1.05rem;
-      font-weight: 300;
-    }
-
-    .lang {
-      display: block;
-      color: #6a7b88;
-      font-size: 0.88rem;
-      margin-top: 3px;
-      font-style: italic;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .product {
-      background: #14171a;
-      border: 1px solid #232931;
-      border-radius: 8px;
-      padding: 1.8rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      position: relative;
-    }
-
-    .product.recommended {
-      border-color: #8ab4f8;
-      box-shadow: 0 0 0 1px #8ab4f840;
-    }
-
-    .product.recommended::before {
-      content: "РЕКОМЕНДУЕМ";
-      position: absolute;
-      top: -12px;
-      right: 20px;
-      background: #8ab4f8;
-      color: #0d0f12;
-      font-size: 0.75rem;
-      padding: 2px 8px;
-      border-radius: 3px;
-      font-weight: bold;
-    }
-
-    .product:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .product h2 {
-      font-size: 1.4rem;
-      margin-bottom: 0.6rem;
-      color: #d1d9e0;
-    }
-
-    .product .desc {
-      color: #8a9ba8;
-      font-size: 0.95rem;
-      margin: 0.6rem 0 1.2rem;
-      font-weight: 300;
-    }
-
-    .product .price {
-      font-size: 1.25rem;
-      color: #8ab4f8;
-      font-weight: 500;
-      margin-bottom: 1rem;
-    }
-
-    .pay-link {
-      display: block;
-      width: 100%;
-      padding: 0.85rem;
-      background: transparent;
-      color: #8ab4f8;
-      border: 1px solid #5a7d9a;
-      border-radius: 4px;
-      font-family: inherit;
-      font-weight: 500;
-      font-size: 1rem;
-      text-align: center;
-      text-decoration: none;
-      transition: all 0.25s ease;
-    }
-
-    .pay-link:hover {
-      background: rgba(138, 180, 248, 0.08);
-      border-color: #8ab4f8;
-    }
-
-    /* Страница деталей */
-    #detail-view {
-      display: none;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: #14171a;
-      border: 1px solid #232931;
-      border-radius: 8px;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    #detail-view.visible {
-      display: block;
-      opacity: 1;
-    }
-
-    #detail-view h2 {
-      font-size: 1.8rem;
-      color: #d1d9e0;
-      margin-bottom: 1rem;
-    }
-
-    #detail-view .content-list {
-      margin: 1.2rem 0;
-      padding-left: 1.4rem;
-      color: #a0b0c0;
-    }
-
-    #detail-view .content-list li {
-      margin-bottom: 0.6rem;
-    }
-
-    .back-link {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.6rem 1.2rem;
-      background: transparent;
-      color: #8ab4f8;
-      border: 1px solid #5a7d9a;
-      border-radius: 4px;
-      font-family: inherit;
-      text-decoration: none;
-      transition: all 0.2s;
-    }
-
-    .back-link:hover {
-      background: rgba(138, 180, 248, 0.08);
-      border-color: #8ab4f8;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 4rem;
-      color: #5a6b7c;
-      font-size: 0.9rem;
-      font-weight: 300;
-    }
-
-    footer a {
-      color: #8ab4f8;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      body { padding: 1.2rem; }
-      h1 { font-size: 2.1rem; }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Главный экран -->
-  <div id="product-list" class="fade-in">
-    <header>
-      <h1>highest archive paralyze.xyz</h1>
-      <p class="subtitle">
-        защищено • фрагментировано • доступно только по допуску
-        <span class="lang">secure • fragmented • accessible only with clearance</span>
-      </p>
-    </header>
-
-    <main>
-      <div class="products">
-        <div class="product" data-id="weekly">
-          <h2>НЕДЕЛЬНЫЙ ДОСТУП</h2>
-          <p class="desc">
-            7 дней к полному архиву<br>
-            <span class="lang">7-day full archive access</span>
-          </p>
-          <p class="price">$5.56 / 450 ₽</p>
-          <a href="https://t.me/shootingddisa" class="pay-link" target="_blank">ЗА ПОКУПКОЙ В ТЕЛЕГРАМ @shootingddisa</a>
-        </div>
-
-        <div class="product recommended" data-id="monthly">
-          <h2>МЕСЯЧНАЯ ПОДПИСКА</h2>
-          <p class="desc">
-            Полный месяц без ограничений<br>
-            <span class="lang">Full month, unlimited access</span>
-          </p>
-          <p class="price">$9.88 / 800 ₽</p>
-          <a href="https://t.me/shootingddisa" class="pay-link" target="_blank">ЗА ПОКУПКОЙ В ТЕЛЕГРАМ @shootingddisa</a>
-        </div>
-
-        <div class="product" data-id="lifetime">
-          <h2>ПОЖИЗНЕННЫЙ ДОСТУП</h2>
-          <p class="desc">
-            Навсегда. Без обновлений оплаты.<br>
-            <span class="lang">Forever. No recurring payments.</span>
-          </p>
-          <p class="price">$18.53 / 1 500 ₽</p>
-          <a href="https://t.me/shootingddisa" class="pay-link" target="_blank">ЗА ПОКУПКОЙ В ТЕЛЕГРАМ @shootingddisa</a>
-        </div>
-      </div>
-    </main>
-  </div>
-
-  <!-- Детали тарифа -->
-  <div id="detail-view">
-    <h2 id="detail-title">Загрузка...</h2>
-    <div id="detail-desc"></div>
-    <div id="detail-content"></div>
-    <a href="#" class="back-link" onclick="showView('product-list'); return false;">← НАЗАД К ПЛАНАМ</a>
-  </div>
-
-  <footer>
-    <p>
-      Владелец: <a href="https://t.me/shootingddisa" target="_blank">@shootingddisa</a> •  
-      Архив: <a href="https://t.me/archive_what" target="_blank">@archive_what</a><br>
-      <span class="lang">Owner: @shootingddisa • Archive: @archive_what</span>
-    </p>
-    <p style="margin-top: 8px;">
-      © 2025 • highest archive paralyze.xyz • все данные зашифрованы при хранении<br>
-      <span class="lang">© 2025 • highest archive paralyze.xyz • all data is encrypted at rest</span>
-    </p>
-  </footer>
-
-  <script>
-    const plans = {
-      weekly: {
-        title: "НЕДЕЛЬНЫЙ ДОСТУП",
-        desc: "7 дней к полному архиву",
-        descEn: "7-day full archive access",
-        content: [
-          "• Доступ ко всем файлам архива на 7 дней",
-          "• Возможность перейти на месячную подписку по окончании",
-          "• Стоимость: $5.56 (450 ₽)",
-          "• Автоматическое отключение по истечении срока"
-        ]
-      },
-      monthly: {
-        title: "МЕСЯЧНАЯ ПОДПИСКА",
-        desc: "Полный месяц без ограничений",
-        descEn: "Full month, unlimited access",
-        content: [
-          "• Полный доступ на 30 дней",
-          "• Все обновления архива включены",
-          "• Стоимость: $9.88 (800 ₽)",
-          "• Можно продлить или перейти на пожизненный доступ"
-        ]
-      },
-      lifetime: {
-        title: "ПОЖИЗНЕННЫЙ ДОСТУП",
-        desc: "Навсегда. Без обновлений оплаты.",
-        descEn: "Forever. No recurring payments.",
-        content: [
-          "• Пожизненный доступ ко всем текущим и будущим данным",
-          "• Включены все обновления архива",
-          "• Стоимость: $18.53 (1 500 ₽)",
-          "• Оплата один раз — доступ навсегда"
-        ]
-      }
-    };
-
-    function showView(viewId) {
-      document.querySelectorAll('#product-list, #detail-view').forEach(el => {
-        el.classList.remove('visible');
-        el.style.display = 'none';
-      });
-      const target = document.getElementById(viewId);
-      if (target) {
-        target.style.display = 'block';
-        setTimeout(() => target.classList.add('visible'), 10);
-      }
-    }
-
-    function showDetailView(id) {
-      const item = plans[id];
-      if (!item) return;
-
-      document.getElementById('detail-title').textContent = item.title;
-      document.getElementById('detail-desc').innerHTML = 
-        `${item.desc}<br><span class="lang">${item.descEn}</span>`;
-
-      const list = document.getElementById('detail-content');
-      list.innerHTML = '<ul class="content-list">' + item.content.map(line => `<li>${line}</li>`).join('') + '</ul>';
-    }
-
-    // Клик по карточке → детали, но НЕ если кликнули по кнопке
-    document.querySelectorAll('.product').forEach(card => {
-      card.addEventListener('click', (e) => {
-        if (e.target.closest('.pay-link')) return;
-        const id = card.getAttribute('data-id');
-        showDetailView(id);
-        showView('detail-view');
-      });
-    });
-  </script>
-
-</body>
-</html>
+пшли нахуй
